# torch-recall

./: .gitignore  README.md
Inference/: CMakeLists.txt
Inference/src/: model_runner.cpp
docs/: architecture.md  benchmark.md  design.md  implementation.md
docs/plans/: 2026-04-08-bitmap-inverted-index.md
docs/specs/: 2026-04-08-bitmap-inverted-index-design.md
docs/targeting/: benchmark.md  design.md  implementation.md  walkthrough.md
examples/: 01_build_index.py  01_build_targeting.py  02_query_python.py  02_query_targeting.py  03_query_cpp.sh  03_targeting_cpp.sh  04_pipeline_and.py  README.md
examples/output/: index_meta.json  items.json  pipeline_and_meta.json  targeting_meta.json  targeting_rules.json
index/: pyproject.toml
index/benchmarks/: bench_comparison.py  bench_targeting.py
index/tests/: test_knn.py  test_targeting.py
index/torch_recall/: __main__.py  schema.py
index/torch_recall/query/: dnf.py  parser.py
index/torch_recall/recall_method/knn/: __init__.py  encoder.py  recall.py
index/torch_recall/recall_method/targeting/: __init__.py  builder.py  encoder.py
index/torch_recall/scheduler/: exporter.py
index_model/benchmarks/: bench_comparison.py  bench_targeting.py
index_model/tests/: test_knn.py  test_pipeline.py  test_targeting.py
index_model/torch_recall/: __init__.py  schema.py
inference/src/: main.cpp
offline/benchmarks/: bench_comparison.py  bench_comprehensive.py  bench_recall.py
offline/tests/: test_builder.py  test_e2e.py  test_model.py  test_offline_online.py  test_query.py
online/: CMakeLists.txt
(+32 files in other folders)
