[project]
name = "torch-recall"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
